# dockers

haskell-stack-base/: Dockerfile  build.sh
haskell-stack-base/app/: app.cabal  stack.yaml
haskell-stack-web/: Dockerfile  app.cabal  build.sh
haskell-web-cabal/: Dockerfile
