name:                app
version:             0.1.0.0
license:             BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
    , mtl, bytestring, text
    , lens, optparse-applicative, template-haskell
    -- web
    , wai, wai-logger, wai-extra, http-types
    , warp
    , blaze-html, blaze-markup
    , base64-bytestring
    , HsOpenSSL
    , data-default-class
    , web-routes, boomerang, web-routes-boomerang
    , mime-types
    , http-common
    , http-streams
    , mwc-random
    , io-streams
    , cookie
    , file-embed
    , mmorph
    , network-simple
  default-language:    Haskell2010
