name:                app
version:             0.1.0.0
license:             BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
    , mtl, bytestring, text
    , lens, optparse-applicative, template-haskell
  default-language:    Haskell2010
